--- a/aj_jewellery_python/chatbot.ipynb
+++ b/aj_jewellery_python/chatbot.ipynb
@@ -7,7 +7,24 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "import random"
+    "import random\n",
+    "import io\n",
+    "import string # to process standard python strings\n",
+    "import warnings\n",
+    "import numpy as np\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer"
    ]
   },
   {
@@ -92,6 +109,8 @@
     "                return self.website()\n",
     "            elif found_match and intent == 'owner':\n",
     "                return self.owner()\n",
+    "            else:\n",
+    "                \n",
     "        \n",
     "        if not found_match:\n",
     "            return self.no_match_intent()\n",
@@ -121,11 +140,11 @@
     "        return random.choice(responses)\n",
     "    \n",
     "    def website(self):\n",
-    "        responses = (\"Intellipat is world's largest professional educational company\\n\",\"Intellipat will make you learn concepts in the way \\n\",\"Intellipat is where your career and skill grows\\n\")\n",
+    "        responses = (\"This is the online website for our commercial store!\\n\",\"Welcome to our jewellery website for AJ_jewellery!\\n\",\"We're happy to see you, let's begin you jewellery journey!\\n\")\n",
     "        return random.choice(responses)\n",
     "    \n",
     "    def owner(self):\n",
-    "        responses = (\"Intellipat is world's largest professional educational company\\n\",\"Intellipat will make you learn concepts in the way \\n\",\"Intellipat is where your career and skill grows\\n\")\n",
+    "        responses = (\"You can check your profile in the profile section!\\n\",\"You can meet us in person, in our store.\\n\")\n",
     "        return random.choice(responses)\n",
     "    \n",
     "    def no_match_intent(self):\n",
